Track large file with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 C:UserssagarDesktopprojectsmovie filter=lfs diff=lfs merge=lfs -text
 recommender filter=lfs diff=lfs merge=lfs -text
 systemsimilarity.pkl filter=lfs diff=lfs merge=lfs -text
+C:/Users/sagar/Desktop/projects/movie[[:space:]]recommender[[:space:]]system/similarity.pkl filter=lfs diff=lfs merge=lfs -text
